# JaaC

./: Cargo.toml  README.md
src/: cli.rs  constants.rs  db.rs  errors.rs  lib.rs  navigator.rs  queries.rs  types.rs  utils.rs
system/: history.txt  test_listener.sh  ubidump2bin.sh  ubifs_config.ini  unpack.sh
