[package]
name = "jiofi-advanced-access-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["cookies"] }
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
serde_json = "1.0"
clap = { version = "3.2.22", features = ["derive"] }
